Fix alignment in action bar

--- a/src/platform/plugins/shared/controls/public/controls/data_controls/options_list_control/components/options_list.scss
+++ b/src/platform/plugins/shared/controls/public/controls/data_controls/options_list_control/components/options_list.scss
@@ -61,6 +61,7 @@
       .optionsList__actionBarDivider {
         height: $euiSize;
         border-right: $euiBorderThin;
+        border-color: $euiTextSubduedColor;
       }
     }
   }
